--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -16,3 +16,11 @@ h1 {
 p {
     color: #535353;
 }
+
+@media only screen and (max-width: 768px) {
+    .about {
+        padding: 10%;
+        text-align: center;
+        width: 80%;
+    }
+}
