--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -56,3 +56,20 @@ header nav img {
 .active {
     color: black;
 }
+
+@media only screen and (max-width: 768px) {
+    header h1 {
+        font-size: 12px;
+        margin-left: 10px;
+    }
+
+    header nav {
+        width: 100%;
+        justify-content: space-between;
+    }
+
+    header nav a {
+        margin: 0;
+        font-size: 12px;
+    }
+}
