--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -54,7 +54,46 @@
 }
 
 .hero-img-wrapper img {
-    width: 80%;
-    height: 80%;
+    width: 70%;
     border-radius: 50px;
+}
+
+@media only screen and (max-width: 768px) {
+    .hero-wrapper {
+        width: 100%;
+        height: 100vh;
+    
+        display: flex;
+        justify-content: center;
+    }
+
+    .hero {
+        width: 80%;
+        z-index: 10;
+
+        justify-content: flex-start;
+        margin-top: 30%;
+    }
+
+    .hero-img-wrapper {
+        width: 100%;
+        height: 100%;
+    
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        z-index: 1;
+        overflow: hidden;
+    }
+
+    .hero-img-wrapper img {
+        width: 100vh;
+        position: absolute;
+        height: 100vh;
+        margin-left: 50%;
+        overflow: hidden;
+        opacity: 20%;
+    }
 }
