--- a/src/components/rarity-item/rarity-item.css
+++ b/src/components/rarity-item/rarity-item.css
@@ -29,3 +29,9 @@
     text-align: center;
     padding: 0px 10px;
 }
+
+@media only screen and (max-width: 768px) {
+    .rarity-item {
+        margin: 0px 0px 50px 0px;
+    }
+}
