--- a/src/components/team-item/team-item.css
+++ b/src/components/team-item/team-item.css
@@ -12,7 +12,7 @@
     margin-bottom: 50px;
     border-radius: 20px;
 
-    margin: 0px 20px;
+    margin: 0px 20px 50px 0px;
 }
 
 .team-item img {
@@ -33,4 +33,10 @@
     color: white;
     text-align: center;
     padding: 0px 10px;
+}
+
+@media only screen and (max-width: 768px) {
+    .team-item {
+        margin: 0px 0px 50px 0px;
+    }
 }
