--- a/src/components/team/team.css
+++ b/src/components/team/team.css
@@ -20,3 +20,9 @@
     text-align: center;
     margin-bottom: 100px;
 }
+
+@media only screen and (max-width: 768px) {
+    .team-wrapper {
+        flex-direction: column;
+    }
+}
