--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -23,9 +23,15 @@
     background: linear-gradient(90deg, #ff6055 0%, #ff4438 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+
+    font-family: "Cinnabar", -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
 }
 
 .hero h4 {
+    font-size: 28px;
+    margin-top: 0px;
     margin-bottom: 40px;
     color: #535353;
 }
@@ -92,8 +98,11 @@
         width: 100vh;
         position: absolute;
         height: 100vh;
-        margin-left: 50%;
+        margin-left: 40%;
         overflow: hidden;
-        opacity: 20%;
+        opacity: 0.2; /* Standard compliant browsers */
+        -moz-opacity: 0.2; /* Firefox and Mozilla browsers */
+        -webkit-opacity: 0.2; /* WebKit browser e.g. Safari */
+        filter: alpha(opacity=20); /* For IE8 and earlier */
     }
 }
