--- a/src/components/rarity-item/rarity-item.css
+++ b/src/components/rarity-item/rarity-item.css
@@ -1,6 +1,6 @@
 .rarity-item {
     width: 250px;
-    height: 350px;
+    height: 370px;
 
     background-color: #222;
     color: white;
@@ -15,12 +15,28 @@
 }
 
 .rarity-item img {
-    width: 150px;
-    height: 150px;
+    width: 250px;
+    height: 250px;
 
-    border-radius: 75px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
 
-    margin-top: 50px;
+    border-width: 3px;
+    border-style: solid;
+    -moz-border-image: -moz-linear-gradient(135deg, rgb(230, 105, 105) 0%, #ff4438 100%);
+    -webkit-border-image: -webkit-linear-gradient(135deg, rgb(230, 105, 105) 0%, #ff4438 100%);
+    border-image: linear-gradient(135deg, rgb(230, 105, 105) 0%, #ff4438 100%);
+    -webkit-border-image-slice: 1;
+    border-image-slice: 1;
+
+    border-left: 0px;
+    border-right: 0px;
+    border-top: 0px;
+}
+
+.rarity-item h4 {
+    font-size: 36px;
+    margin: 10px;
 }
 
 .rarity-item p {
