--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,17 @@
+@font-face {
+  font-family: Cinnabar;
+  src: url("./CinnabarBrush.ttf") format("opentype");
+}
+
+@font-face {
+  font-family: Pine;
+  src: url("./Cheap_Pine_Regular.otf") format("opentype");
+}
+
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: "Pine", -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -13,6 +23,10 @@ a {
   color: white;
   font-size: 12px;
   text-decoration: none;
+}
+
+p {
+  font-size: 20px;
 }
 
 .bg-light {
