--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -8,6 +8,12 @@
     align-items: center;
 }
 
+.about p {
+    font-size: 20px;
+    margin: 0.5em;
+    font-weight: bold;
+}
+
 h1 {
     font-size: 80px;
     color: #ff4438;
