--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -17,7 +17,7 @@
 
 .hero h1 {
     text-align: start;
-    font-size: 64px;
+    font-size: 60px;
     margin-top: 0px;
     background: #ff6055;
     background: linear-gradient(90deg, #ff6055 0%, #ff4438 100%);
@@ -27,6 +27,10 @@
     font-family: "Cinnabar", -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
+}
+
+#genpain {
+    font-size: 80px;
 }
 
 .hero h4 {
