--- a/src/index.css
+++ b/src/index.css
@@ -3,15 +3,10 @@
   src: url("./CinnabarBrush.ttf") format("opentype");
 }
 
-@font-face {
-  font-family: Pine;
-  src: url("./Cheap_Pine_Regular.otf") format("opentype");
-}
-
 body {
   margin: 0;
   padding: 0;
-  font-family: "Pine", -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -23,10 +18,6 @@ a {
   color: white;
   font-size: 12px;
   text-decoration: none;
-}
-
-p {
-  font-size: 20px;
 }
 
 .bg-light {
