--- a/src/components/extra/extra.css
+++ b/src/components/extra/extra.css
@@ -3,6 +3,7 @@
     height: 500px;
 
     display: flex;
+    margin-bottom: 50px;
 }
 
 .extra-item {
@@ -79,6 +80,20 @@
     border-image-slice: 1;
 }
 
+.help {
+    width: 100%;
+    padding: 50px 0px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.help p {
+    font-size: 26px;
+}
+
 @media only screen and (max-width: 768px) {
     .extra {
         width: 100%;
@@ -89,11 +104,14 @@
     
     .extra-item {
         width: 100%;
-        height: 50%;
     }
 
     .extra-item-content {
         width: 90%;
         padding-right: 10%;
+    }
+
+    .help p {
+        font-size: 16px;
     }
 }
