--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -69,9 +69,21 @@
 }
 
 @media only screen and (max-width: 768px) {
+    .hero h1 {
+        font-size: 32px;
+    }
+
+    #genpain {
+        font-size: 50px;
+    }
+
+    .hero h4 {
+        font-size: 20px;
+    }
+
     .hero-wrapper {
         width: 100%;
-        height: 100vh;
+        height: calc(100vh - 75px);
     
         display: flex;
         justify-content: center;
@@ -87,7 +99,7 @@
 
     .hero-img-wrapper {
         width: 100%;
-        height: 100%;
+        height: calc(100vh - 75px);
     
         position: absolute;
         display: flex;
@@ -101,7 +113,7 @@
     .hero-img-wrapper img {
         width: 100vh;
         position: absolute;
-        height: 100vh;
+        height: calc(100vh - 75px);
         margin-left: 40%;
         overflow: hidden;
         opacity: 0.2; /* Standard compliant browsers */
